--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 
 <body>
-	<div>
-		<div>
-			<p>Header Logo</p>
-			<ul>
+	<div class="hero">
+		<div class="navBar">
+			<p class="logo">Header Logo</p>
+			<ul class="links">
 				<li><a href="#">header link one</a></li>
 				<li><a href="#">header link two</a></li>
 				<li><a href="#">header link three</a></li>
 			</ul>
 		</div>
-		<div>
-			<div>
-				<p>This website is awesome</p>
-				<p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+		<div class="intro">
+			<div class="signup">
+				<p id="main">This website is awesome</p>
+				<p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
 				<button>Sign up</button>
 			</div>
-			<div>
+			<div class="placeholder">
 				this is a placeholder for an image
 			</div>
 		</div>
 	</div>
 
 
-	<div>
-		<p>Some random information.</p>
-		<div>
+	<div class="information">
+		<p id="info">Some random information.</p>
+		<div class="cards">
 			<div class="card">
 				<div class="box"></div>
 				<p>this is some subtext under an illustration or image</p>
@@ -54,13 +54,13 @@
 	</div>
 
 
-	<div>
+	<div class="quote">
 		<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
 		<p>-Thor, God of Thunder</p>
 	</div>
 
 
-	<div>
+	<div class="banner">
 		<div>
 			<p>Call to action! It's time!</p>
 			<p>Sign up for our product by clicking that button right over there!</p>
@@ -69,7 +69,7 @@
 	</div>
 
 
-	<div>
+	<div class="footer">
 		Copyright &copy; The Odin Project 2021
 	</div>
 </body>
