--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
 		</div>
 	</div>
 
-
-	<div class="quote">
-		<p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-		<p>-Thor, God of Thunder</p>
+	<div class="quote-container">
+		<div class="quote">
+			<p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+			<p id="thor">-Thor, God of Thunder</p>
+		</div>
 	</div>
 
-
-	<div class="banner">
-		<div>
-			<p>Call to action! It's time!</p>
-			<p>Sign up for our product by clicking that button right over there!</p>
+	<div class="banner-container">	
+		<div class="banner">
+			<div>
+				<p class="banner-one">Call to action! It's time!</p>
+				<p>Sign up for our product by clicking that button right over there!</p>
+			</div>
+			<button>Sign up</button>
 		</div>
-		<button>Sign up</button>
 	</div>
 
 
